# Semantic-Search-for-E-Commerce-Businesses

./: .gitignore  Data Analysis and Processing.ipynb  Tabular Semantic Search.ipynb  pyproject.toml
superlinked_app/: api.py  config.py  constants.py  data_processing.py  embedding.py  index.py  query.py
