[project]
name = "semantic-search-amazon"
version = "0.1.0"
description = ""
authors = [
    {name = "Aneesh Naresh",email = "an524@cornell.edu"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyterlab (>=4.4.4,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
